{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 175,
  "lineage": "99b85e9f-298c-adab-2f56-4469eecdc6b3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_subnet_instances_az1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e01ce4ee18447327",
            "arn": "arn:aws:ec2:us-east-2:863192282163:instance/i-0112c7d8b1aa47ac7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0112c7d8b1aa47ac7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_ec2_public_key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03379caefc7aadad6",
            "private_dns": "ip-10-0-3-6.us-east-2.compute.internal",
            "private_ip": "10.0.3.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d738e7483ef690b7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08c0da16baa240daa",
            "tags": {
              "Name": "GOCD instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bc6bdb0d207a2ef0"
            ]
          },
          "dependencies": [
            "aws_key_pair.aws_ec2_public_key_pair",
            "aws_subnet.private_subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_subnet_instances_az2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e01ce4ee18447327",
            "arn": "arn:aws:ec2:us-east-2:863192282163:instance/i-04253d8006a980002",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04253d8006a980002",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_ec2_public_key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07b344c5e81637eda",
            "private_dns": "ip-10-0-4-4.us-east-2.compute.internal",
            "private_ip": "10.0.4.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f47fa1b2a752849c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ce1307c31b782477",
            "tags": {
              "Name": "Nexus instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bc6bdb0d207a2ef0"
            ]
          },
          "dependencies": [
            "aws_key_pair.aws_ec2_public_key_pair",
            "aws_subnet.private_subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_subnet_bastian_instance_az1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e01ce4ee18447327",
            "arn": "arn:aws:ec2:us-east-2:863192282163:instance/i-08926845905cc72f0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08926845905cc72f0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_ec2_public_key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fc968fcd9c745f52",
            "private_dns": "ip-10-0-1-9.us-east-2.compute.internal",
            "private_ip": "10.0.1.9",
            "public_ip": "3.15.13.166",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01d0a995d8412fe08",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-050d6aa653b02dc2b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bc4d3146df59ae05",
            "tags": {
              "Name": "bastian instnace"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-050d6aa653b02dc2b"
            ]
          },
          "dependencies": [
            "aws_key_pair.aws_ec2_public_key_pair",
            "aws_security_group.allow_SSH_NGINX_bastian",
            "aws_subnet.public_subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_subnet_nginx_instance1_az2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e01ce4ee18447327",
            "arn": "arn:aws:ec2:us-east-2:863192282163:instance/i-070073e5391b5b44b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-070073e5391b5b44b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_ec2_public_key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0446a504d60a5dcd3",
            "private_dns": "ip-10-0-2-11.us-east-2.compute.internal",
            "private_ip": "10.0.2.11",
            "public_ip": "18.216.227.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e6df90196dec5de1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07bf02b1852d6c2c2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a254a9c022d725ce",
            "tags": {
              "Name": "nginx instance 1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07bf02b1852d6c2c2"
            ]
          },
          "dependencies": [
            "aws_key_pair.aws_ec2_public_key_pair",
            "aws_security_group.allow_SSH_Nginx_internal_inbounds",
            "aws_subnet.public_subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_subnet_nginx_instance2_az2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e01ce4ee18447327",
            "arn": "arn:aws:ec2:us-east-2:863192282163:instance/i-02a8903736064a5ec",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02a8903736064a5ec",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_ec2_public_key_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d6c06f7d8c2ae4f6",
            "private_dns": "ip-10-0-2-6.us-east-2.compute.internal",
            "private_ip": "10.0.2.6",
            "public_ip": "3.16.148.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01399dbdb22aeeee7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-07bf02b1852d6c2c2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a254a9c022d725ce",
            "tags": {
              "Name": "nginx instance 2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07bf02b1852d6c2c2"
            ]
          },
          "dependencies": [
            "aws_key_pair.aws_ec2_public_key_pair",
            "aws_security_group.allow_SSH_Nginx_internal_inbounds",
            "aws_subnet.public_subnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "first_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0a2b3812b44b817f6",
            "owner_id": "863192282163",
            "tags": {
              "Name": "first_igw"
            },
            "vpc_id": "vpc-058822710404bc0bb"
          },
          "dependencies": [
            "aws_vpc.terraform_iti_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05748e8c396f2308c",
            "owner_id": "863192282163",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_route_table"
            },
            "vpc_id": "vpc-058822710404bc0bb"
          },
          "dependencies": [
            "aws_vpc.terraform_iti_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a6224601e44bc940",
            "owner_id": "863192282163",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a2b3812b44b817f6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "vpc_id": "vpc-058822710404bc0bb"
          },
          "dependencies": [
            "aws_internet_gateway.first_igw",
            "aws_vpc.terraform_iti_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_private_subnet1_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09833a0ea32008f8d",
            "route_table_id": "rtb-05748e8c396f2308c",
            "subnet_id": "subnet-08c0da16baa240daa"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet1",
            "aws_vpc.terraform_iti_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_private_subnet2_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6c0bcc4234b13c3",
            "route_table_id": "rtb-05748e8c396f2308c",
            "subnet_id": "subnet-0ce1307c31b782477"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet2",
            "aws_vpc.terraform_iti_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_public_subnet1_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013ab29669918548c",
            "route_table_id": "rtb-0a6224601e44bc940",
            "subnet_id": "subnet-0bc4d3146df59ae05"
          },
          "dependencies": [
            "aws_internet_gateway.first_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet1",
            "aws_vpc.terraform_iti_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_public_subnet2_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e50f2bb7d2259b6",
            "route_table_id": "rtb-0a6224601e44bc940",
            "subnet_id": "subnet-0a254a9c022d725ce"
          },
          "dependencies": [
            "aws_internet_gateway.first_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet2",
            "aws_vpc.terraform_iti_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_SSH_GOCD_internal_inbounds",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:863192282163:security-group/sg-05bd32b5010a782bf",
            "description": "Allow SSH and SSH_GOCD_internal inbounds",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05bd32b5010a782bf",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow GOCD to internal.",
                "from_port": 8153,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8153
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow SSH to internal.",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_internal_SSH_GOCD",
            "name_prefix": null,
            "owner_id": "863192282163",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow ssh and NGINX internal inbounds"
            },
            "timeouts": null,
            "vpc_id": "vpc-058822710404bc0bb"
          },
          "dependencies": [
            "aws_vpc.terraform_iti_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_SSH_NGINX_bastian",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:863192282163:security-group/sg-050d6aa653b02dc2b",
            "description": "Allow SSH and NGINX inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050d6aa653b02dc2b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Nginx to VPC.",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH to VPC.",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_SSH_NGINX",
            "name_prefix": null,
            "owner_id": "863192282163",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow ssh and NGINX"
            },
            "timeouts": null,
            "vpc_id": "vpc-058822710404bc0bb"
          },
          "dependencies": [
            "aws_vpc.terraform_iti_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_SSH_Nexus_internal_inbounds",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:863192282163:security-group/sg-0f292ac62622d10be",
            "description": "Allow SSH and SSH_Nexus_internal inbounds",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f292ac62622d10be",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow Nexus to internal.",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow SSH to internal.",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_internal_SSH_Nexus",
            "name_prefix": null,
            "owner_id": "863192282163",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow ssh and NGINX internal inbounds"
            },
            "timeouts": null,
            "vpc_id": "vpc-058822710404bc0bb"
          },
          "dependencies": [
            "aws_vpc.terraform_iti_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_SSH_Nginx_internal_inbounds",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:863192282163:security-group/sg-07bf02b1852d6c2c2",
            "description": "Allow SSH and SSH_NGINXinternal inbounds",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07bf02b1852d6c2c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow Nginx to internal.",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow SSH to internal.",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_internal_SSH_NGINX",
            "name_prefix": null,
            "owner_id": "863192282163",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow ssh and NGINX internal inbounds"
            },
            "timeouts": null,
            "vpc_id": "vpc-058822710404bc0bb"
          },
          "dependencies": [
            "aws_vpc.terraform_iti_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:863192282163:subnet/subnet-08c0da16baa240daa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/28",
            "id": "subnet-08c0da16baa240daa",
            "map_public_ip_on_launch": false,
            "owner_id": "863192282163",
            "tags": {
              "Name": "private_subnet1"
            },
            "vpc_id": "vpc-058822710404bc0bb"
          },
          "dependencies": [
            "aws_vpc.terraform_iti_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:863192282163:subnet/subnet-0ce1307c31b782477",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.4.0/28",
            "id": "subnet-0ce1307c31b782477",
            "map_public_ip_on_launch": false,
            "owner_id": "863192282163",
            "tags": {
              "Name": "private_subnet2"
            },
            "vpc_id": "vpc-058822710404bc0bb"
          },
          "dependencies": [
            "aws_vpc.terraform_iti_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:863192282163:subnet/subnet-0bc4d3146df59ae05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/28",
            "id": "subnet-0bc4d3146df59ae05",
            "map_public_ip_on_launch": true,
            "owner_id": "863192282163",
            "tags": {
              "Name": "public_subnet1"
            },
            "vpc_id": "vpc-058822710404bc0bb"
          },
          "dependencies": [
            "aws_vpc.terraform_iti_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:863192282163:subnet/subnet-0a254a9c022d725ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.2.0/28",
            "id": "subnet-0a254a9c022d725ce",
            "map_public_ip_on_launch": true,
            "owner_id": "863192282163",
            "tags": {
              "Name": "public_subnet2"
            },
            "vpc_id": "vpc-058822710404bc0bb"
          },
          "dependencies": [
            "aws_vpc.terraform_iti_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_iti_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:863192282163:vpc/vpc-058822710404bc0bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09bc2ebaa5b51d205",
            "default_route_table_id": "rtb-0ab43ca2d38f064e0",
            "default_security_group_id": "sg-0bc6bdb0d207a2ef0",
            "dhcp_options_id": "dopt-17bd5f7c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-058822710404bc0bb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ab43ca2d38f064e0",
            "owner_id": "863192282163",
            "tags": {
              "Name": "terraform_iti_vpc"
            }
          }
        }
      ]
    }
  ]
}